<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="mainViewmodel"
            type="com.mj.covid19detector.model.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <!--타이틀 및 자료 업데이트 시간-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_patient_status"
                android:textColor="@color/title_color"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="(1.11. 00시 기준, '20.1.3. 이후 누계)"
                android:textColor="@color/black"
                android:textSize="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!--확진 통계-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/infect_patient_color"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_infected_patient"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:text="(누적)"
                        android:textColor="@color/white"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/txt_infected_patients"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_infected_patients_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="10dp" />
            </LinearLayout>

            <!--격리 해제 통계-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/quarantine_release_color"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_quarantine_release"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txt_quarantine_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/txt_quarantine_release_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="10dp" />
            </LinearLayout>

            <!--치료 통계-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/under_treatment_color"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_under_treatment"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txt_under_treatment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/txt_under_treatment_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="10dp" />
            </LinearLayout>

            <!--사망 통계-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/death_color"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_death"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txt_death"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/txt_death_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="10dp" />
            </LinearLayout>
        </LinearLayout>


        <!--검사 현황-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_exam_status"
                    android:textColor="@color/title_color"
                    android:textSize="22dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--누적검사수-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="누적 검사수"
                    android:textColor="@color/gray"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_total_exam_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/title_color"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--누적 검사완료수-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="누적 검사완료수"
                    android:textColor="@color/gray"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_total_done_exam_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/title_color"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--누적 확진률-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="누적 확진율"
                    android:textColor="@color/gray"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_decide_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/title_color"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="(결과양성 / 총 검사완료수 * 100%)"
                android:textColor="@color/black"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>
</layout>